# reddit-saves

./: Cargo.toml  README.md  pyproject.toml  reddit-saves
.github/workflows/: build.yml  homebrew.yml  publish.yml  release.yml
src/: cli.rs  main.rs  op.rs
