[package]
name = "reddit-saves"
authors = [ "Dan Sully <dan+github@sully.org>" ]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/dsully/reddit-saves"

[[bin]]
name = "reddit-saves"
path = "src/main.rs"

[dependencies]
clap = { version = "~4.5.26", features = [
    "cargo",
    "color",
    "derive",
    "suggestions",
    "wrap_help",
] }
clap-verbosity-flag = "3.0.2"
color-eyre = "0.6.3"
env_logger = "0.11.6"
roux = { version = "2.2.14", features = [
    "blocking",
    "rustls",
], default-features = false }
serde = "1.0.217"
serde_json = "1.0.135"
tracing = "0.1.41"

[profile.release]
lto = true
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.9.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "dsully/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"

# Use Apple Silicon runners.
[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-14"
