[package]
authors = [ "Dan Sully <dan+github@sully.org>" ]
description = "Export Reddit Saved Posts to JSON"
edition = "2024"
homepage = "https://github.com/dsully/reddit-saves"
name = "reddit-saves"
repository = "https://github.com/dsully/reddit-saves"
version = "0.0.1"

[[bin]]
name = "reddit-saves"
path = "src/main.rs"

[dependencies]
clap = { version = "~4.5.30", features = [
  "cargo",
  "color",
  "derive",
  "suggestions",
  "wrap_help",
] }
clap-verbosity-flag = "3.0.2"
color-eyre = "0.6.3"
env_logger = "0.11.6"
roux = { version = "2.2.14", features = [
  "blocking",
  "rustls",
], default-features = false }
serde = "1.0.218"
serde_json = "1.0.139"
tracing = "0.1.41"

[profile.release]
lto = true
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
